# SteamAppScrape

./: Clean.py  Makefile  README.md  note  pyproject.toml
database/: README.md  import_game.py  read_pickle.py  schema.sql
database/local_data/: 10000.json  15000.json  16000.json  17000.json  20000.pickle  210000.json  215000.json  220000.json  225000.json  310000.json  330000.json  sample.json
docs/: index.html  search.json
docs/site_libs/bootstrap/: bootstrap-3780470db94804319859bd9b44e765b6.min.css  bootstrap-3ab970eaa984d4dfcdd10b82e1f4d2ae.min.css  bootstrap-3fcf6f4ae98fd27075b73b65762f5bbf.min.css
extract/: DivCut.py  HtmlGrab.py  TagGrab.py
extract/outputs/: Clean.py
extractors/: README.md  scrape.py
extractors/html/: DivCut.py  HtmlGrab.py  TagGrab.py
extractors/inputs/: test.txt
extractors/nonlibrary/: README.md  TagAuto.py
extractors/nonlibrary/html/: TagGrab.py
extractors/nonlibrary/outputs/: 440-tags.txt  output.html
extractors/outputs/: 1295660-tags.txt  output.html
importers/: README.md  import.py
reports/: Makefile  _quarto.yml  deliverable-4.qmd  deliverable-5.qmd  deliverable-7.qmd  index.qmd
webapp/: Makefile  README.md  app.py  db_handler.py  helpers.py  queries.py  scrape.py  steamAPI.py
webapp/static/: styles.css
webapp/templates/: about.html  appid.html  delete_game.html  game_display.html  import_user.html  index.html  query_display.html  recommendation.html  update_game.html
