[tool.poetry]
name = "steamappscrape"
version = "0.1.0"
description = "Database / Scraping tools for Steam"
authors = ["Jon Rutan <rutanj@vcu.edu>", "Trevor Corcoran <corcoranj@vcu.edu>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11"
beautifulsoup4 = "^4.13.3"
sqlalchemy = "^2.0.40"
mysql-connector-python = "^9.2.0"
dotenv = "^0.9.9"
flask = "^3.1.0"
pandas = "^2.2.3"
pymysql = "^1.1.1"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
